fixed the spacing between the logo and the nightmode button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,7 +220,7 @@ div.container div.blockBody:nth-of-type(2) table tr:first-of-type th:last-of-typ
 }
 /* the logo needs some space */
 .navbar-logo {
-	margin-right: 10px;
+	margin-right: 30px;
 }
 
 :target {
@@ -370,8 +370,6 @@ div.container div.blockBody:nth-of-type(2) table tr:first-of-type th:last-of-typ
 	background: transparent url(/img/sun.png) no-repeat;
 	background-size: 24px;
 	margin-top: 10px;
-	margin-left: 3px;
-	width: 24px;
 }
 
 footer {
